# python-jornada-de-dados

./: .gitignore  Bootcamp.excalidraw  Makefile  README.md  pyproject.toml
classes_11_15/: notes.md
classes_11_15/class_12/: csv_test.py  example.csv  example_2.csv
classes_11_15/class_12/src/: use_class.py
classes_11_15/class_13/src/: main.py
classes_11_15/class_15/FakeApi/: start.py
classes_11_15/src/: use_class.py
classes_16_20/: notes.md
classes_16_20/class_16/: database.db  delete_ops.py  main.py  read_ops.py
classes_16_20/class_17/: challenge.py  example_01.py  meubanco.db
classes_16_20/class_18/: example.py
classes_16_20/class_18/src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
classes_16_20/class_19/: README.md
classes_16_20/class_19/data/: test.db
classes_16_20/class_19/src/: database.py  main.py  models.py
classes_16_20/class_20/: README.md  docker-compose.yml
classes_16_20/class_20/backend/: crud.py  database.py  router.py
classes_16_20/class_20/frontend/: app.py
classes_1_5/: class_02.py  class_03.py  class_04.py  main.py  notes.md  sample.csv
classes_1_5/class_05/: config.py  create_measurements.py  main.py  using_polas.py  using_python.py  using_python_old.py  utils.py
classes_1_5/class_05/data/: stats.csv
classes_6_10/: class_07.py  notes.md  ruff_experiment.py
classes_6_10/class_09/: log_different_paths.py  sample_decorator.py  test_decorators.py
classes_6_10/class_09/project_class_09/: etl.py  pipeline.py  sample_log_decorator.py  utils_log.py  workflow.excalidraw
classes_6_10/project/: etl.py  main.py
classes_6_10/project_class_07/: etl.py  main.py  vendas.csv
classes_6_10/project_class_08/: etl.py  pipeline.py  workflow.excalidraw
classes_6_10/project_class_09/: class_09.py  etl.py  pipeline.py  sample_decorator.py  sample_logs.py  test_decorators.py  utils_log.py
(+16 files in other folders)
