[project]
name = "python-jornada-de-dados"
version = "0.1.0"
description = ""
authors = [
    { name = "Igor Nunes Patricio", email = "igornunespatricio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tqdm (>=4.67.1,<5.0.0)", "polars (>=1.34.0,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
]
