[project]
name = "python-jornada-de-dados"
version = "0.1.0"
description = ""
authors = [
    { name = "Igor Nunes Patricio", email = "igornunespatricio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "fastapi[standard] (>=0.119.1,<0.120.0)",
    "faker (>=37.11.0,<38.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.14.0,<0.15.0)", "black (>=25.9.0,<26.0.0)"]
